WIP: stashing changes

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -116,6 +116,10 @@ bolt_homepage:
   filename: bolt-homepage.twig
   path: src/_patterns/04-pages/bolt-homepage/bolt-homepage.twig
   namespace: '@bolt/bolt-homepage.twig'
+bottom_bar:
+  filename: _bottom-bar.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_bottom-bar.twig
+  namespace: '@bolt/_bottom-bar.twig'
 brand_colors:
   filename: 01-brand-colors.twig
   path: src/_patterns/01-core/02-tools/tools-spacing/demos/01-brand-colors.twig
@@ -132,6 +136,10 @@ button_kitchen_sink:
   filename: button-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-button/demos/button-kitchen-sink.twig
   namespace: '@bolt/button-kitchen-sink.twig'
+camera:
+  filename: _camera.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_camera.twig
+  namespace: '@bolt/_camera.twig'
 card:
   filename: card.twig
   path: src/_patterns/02-components/bolt-card/src/card.twig
@@ -189,6 +197,10 @@ d8_product_landing:
   filename: d8-product-landing.twig
   path: src/_patterns/04-pages/d8-product-landing/d8-product-landing.twig
   namespace: '@bolt/d8-product-landing.twig'
+d8_product_t2:
+  filename: d8-product-t2.twig
+  path: src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
+  namespace: '@bolt/d8-product-t2.twig'
 d8_resource_details:
   filename: d8-resource-details.twig
   path: src/_patterns/04-pages/d8-resource-details/d8-resource-details.twig
@@ -201,10 +213,18 @@ demo:
   filename: demo.twig
   path: src/_patterns/00-utils/demo.twig
   namespace: '@bolt/demo.twig'
+device_viewer:
+  filename: device-viewer.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/device-viewer.twig
+  namespace: '@bolt/device-viewer.twig'
 eyebrow:
   filename: eyebrow.twig
   path: src/_patterns/02-components/bolt-headline/src/eyebrow.twig
   namespace: '@bolt/eyebrow.twig'
+figure:
+  filename: figure.twig
+  path: src/_patterns/02-components/bolt-figure/src/figure.twig
+  namespace: '@bolt/figure.twig'
 flag:
   filename: flag.twig
   path: src/_patterns/01-core/05-objects/bolt-flag-object/src/flag.twig
@@ -249,6 +269,10 @@ headline_kitchen_sink:
   filename: headline-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-headline/demo/headline-kitchen-sink.twig
   namespace: '@bolt/headline-kitchen-sink.twig'
+home:
+  filename: _home.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_home.twig
+  namespace: '@bolt/_home.twig'
 homepage_qa:
   filename: homepage-qa.twig
   path: src/_patterns/04-pages/bolt-theming-qa/homepage-qa.twig
@@ -270,6 +294,26 @@ inline_list:
   path: >-
     src/_patterns/01-core/05-objects/bolt-inline-list-object/src/inline-list.twig
   namespace: '@bolt/inline-list.twig'
+ipad:
+  filename: _ipad.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_ipad.twig
+  namespace: '@bolt/_ipad.twig'
+iphone_4s:
+  filename: _iphone-4s.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_iphone-4s.twig
+  namespace: '@bolt/_iphone-4s.twig'
+iphone_5s:
+  filename: _iphone-5s.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_iphone-5s.twig
+  namespace: '@bolt/_iphone-5s.twig'
+iphone_8:
+  filename: _iphone-8.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_iphone-8.twig
+  namespace: '@bolt/_iphone-8.twig'
+iphone_x:
+  filename: _iphone-x.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_iphone-x.twig
+  namespace: '@bolt/_iphone-x.twig'
 island:
   filename: island.twig
   path: src/_patterns/01-core/05-objects/bolt-island-object/src/island.twig
@@ -290,6 +334,18 @@ logo:
   filename: logo.twig
   path: src/_patterns/02-components/bolt-logo/src/logo.twig
   namespace: '@bolt/logo.twig'
+macbook:
+  filename: _macbook.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_macbook.twig
+  namespace: '@bolt/_macbook.twig'
+nexus_6:
+  filename: _nexus-6.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_nexus-6.twig
+  namespace: '@bolt/_nexus-6.twig'
+note_8:
+  filename: _note-8.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/devices/_note-8.twig
+  namespace: '@bolt/_note-8.twig'
 ordered_list:
   filename: ordered-list.twig
   path: src/_patterns/02-components/bolt-ordered-list/src/ordered-list.twig
@@ -343,10 +399,26 @@ schema_docs:
   filename: schema-docs.twig
   path: src/_patterns/00-utils/schema-docs.twig
   namespace: '@bolt/schema-docs.twig'
+screen:
+  filename: _screen.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_screen.twig
+  namespace: '@bolt/_screen.twig'
+sensor:
+  filename: _sensor.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_sensor.twig
+  namespace: '@bolt/_sensor.twig'
+sleep:
+  filename: _sleep.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_sleep.twig
+  namespace: '@bolt/_sleep.twig'
 small:
   filename: small.twig
   path: src/_patterns/01-core/04-elements/elements-small/small.twig
   namespace: '@bolt/small.twig'
+speaker:
+  filename: _speaker.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_speaker.twig
+  namespace: '@bolt/_speaker.twig'
 status_colors:
   filename: 02-status-colors.twig
   path: src/_patterns/01-core/02-tools/tools-spacing/demos/02-status-colors.twig
@@ -371,6 +443,10 @@ theme_demo:
   filename: theme-demo.twig
   path: src/_patterns/00-utils/theme-demo.twig
   namespace: '@bolt/theme-demo.twig'
+top_bar:
+  filename: _top-bar.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_top-bar.twig
+  namespace: '@bolt/_top-bar.twig'
 typography:
   filename: _typography.twig
   path: src/_patterns/02-components/bolt-headline/src/_typography.twig
@@ -408,6 +484,10 @@ unordered_list__theme_demo__xlight:
   path: >-
     src/_patterns/02-components/bolt-unordered-list/demo/theming/01-unordered-list--theme-demo--xlight.twig
   namespace: '@bolt/01-unordered-list--theme-demo--xlight.twig'
+volume:
+  filename: _volume.twig
+  path: src/_patterns/02-components/bolt-device-viewer/src/parts/_volume.twig
+  namespace: '@bolt/_volume.twig'
 wrapper:
   filename: wrapper.twig
   path: src/_patterns/01-core/05-objects/bolt-wrapper-object/src/wrapper.twig
