--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
     "@bolt/components-all": "^0.5.3",
     "@bolt/components-card": "^0.5.2",
     "@bolt/components-critical-fonts": "^0.4.2",
+    "@bolt/components-device-viewer": "^0.0.0",
     "@bolt/components-icon": "^0.2.1",
     "@bolt/components-image": "^0.2.1",
     "@bolt/elements-all": "^0.5.2",
