WIP: stashing changes

--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -46,6 +46,7 @@
 		"@bolt/components-chip": "^0.2.0",
 		"@bolt/components-chip-list": "^0.2.0",
 		"@bolt/components-color-swatch": "^0.5.0",
+		"@bolt/components-device-viewer": "^0.0.0",
 		"@bolt/components-critical-fonts": "^0.4.7",
 		"@bolt/components-critical-path": "^0.2.0",
 		"@bolt/components-headline": "^0.6.3",
