--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "@bolt/components-card": "^0.5.4",
     "@bolt/components-critical-fonts": "^0.4.7",
     "@bolt/components-icon": "^0.2.5",
+    "@bolt/components-device-viewer": "^0.0.0",
     "@bolt/components-image": "^0.2.1",
     "@bolt/elements-all": "^0.5.4",
     "@bolt/generic-all": "^0.5.2",
