--- a/src/_patterns/02-components/bolt-navbar/package.json
+++ b/src/_patterns/02-components/bolt-navbar/package.json
@@ -39,6 +39,12 @@
   },
   "dependencies": {
     "@bolt/settings-global": "^0.7.0",
-    "@bolt/tools-spacing": "^0.5.0"
+    "@bolt/settings-colors": "^0.6.2",
+    "@bolt/settings-font-size": "^0.8.2",
+    "@bolt/settings-font-weight": "^0.8.1",
+    "@bolt/tools-spacing": "^0.5.0",
+    "@bolt/tools-color-palette": "^0.5.2",
+    "@bolt/tools-font-size": "^0.5.2",
+    "@bolt/tools-font-weight": "^0.5.1"
   }
 }
