--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -57,6 +57,7 @@
 		"@bolt/components-page-header": "^0.0.1-alpha.2",
 		"@bolt/components-site": "^0.5.0",
 		"@bolt/components-teaser": "^0.2.0",
-		"@bolt/components-unordered-list": "^0.1.2"
+		"@bolt/components-unordered-list": "^0.1.2",
+		"@bolt/components-navbar": "^0.0.0"
 	}
 }
