BK-6: Fix navbar component version requirement
Pre-release versions like alpha and beta must be specified as exact
versions.  See https://github.com/npm/node-semver#prerelease-tags

--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -52,12 +52,12 @@
 		"@bolt/components-icons": "^0.1.1",
 		"@bolt/components-image": "^0.2.1",
 		"@bolt/components-logo": "^0.2.1",
+		"@bolt/components-navbar": "^0.1.0-alpha.0",
 		"@bolt/components-ordered-list": "^0.1.2",
 		"@bolt/components-page-footer": "^0.4.0",
 		"@bolt/components-page-header": "^0.0.1-alpha.2",
 		"@bolt/components-site": "^0.5.0",
 		"@bolt/components-teaser": "^0.2.0",
-		"@bolt/components-unordered-list": "^0.1.2",
-		"@bolt/components-navbar": "^0.0.0"
+		"@bolt/components-unordered-list": "^0.1.2"
 	}
 }
