WIP: removing target styles

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -290,6 +290,30 @@ navbar:
   filename: navbar.twig
   path: src/_patterns/02-components/bolt-navbar/src/navbar.twig
   namespace: '@bolt/navbar.twig'
+navbar__theme_demo:
+  filename: navbar--theme-demo.twig
+  path: src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo.twig
+  namespace: '@bolt/navbar--theme-demo.twig'
+navbar__theme_demo__dark:
+  filename: navbar--theme-demo--dark.twig
+  path: >-
+    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--dark.twig
+  namespace: '@bolt/navbar--theme-demo--dark.twig'
+navbar__theme_demo__light:
+  filename: navbar--theme-demo--light.twig
+  path: >-
+    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--light.twig
+  namespace: '@bolt/navbar--theme-demo--light.twig'
+navbar__theme_demo__xdark:
+  filename: navbar--theme-demo--xdark.twig
+  path: >-
+    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--xdark.twig
+  namespace: '@bolt/navbar--theme-demo--xdark.twig'
+navbar__theme_demo__xlight:
+  filename: navbar--theme-demo--xlight.twig
+  path: >-
+    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--xlight.twig
+  namespace: '@bolt/navbar--theme-demo--xlight.twig'
 ordered_list:
   filename: ordered-list.twig
   path: src/_patterns/02-components/bolt-ordered-list/src/ordered-list.twig
