--- a/build-tools/gulp-tasks/build-symlinks/package.json
+++ b/build-tools/gulp-tasks/build-symlinks/package.json
@@ -25,6 +25,7 @@
   ],
   "dependencies": {
     "@bolt/build-core": "^0.4.1",
+    "array-to-table": "^1.0.1",
     "bump-regex": "^2.8.0",
     "cosmiconfig": "^3.1.0",
     "del-symlinks": "^0.1.2",
@@ -34,12 +35,16 @@
     "gulp-util": "^3.0.8",
     "js-yaml": "^3.9.1",
     "latest-version": "^3.1.0",
+    "mdast-util-inject": "^1.1.0",
+    "mdast-util-to-string": "^1.0.4",
     "merge": "^1.2.0",
     "package-json": "^4.0.1",
     "path": "^0.12.7",
     "pkg-versions": "^1.1.0",
     "pretty-print": "^1.1.0",
+    "remark-parse": "^4.0.0",
     "semver": "^5.4.1",
+    "unified": "^6.1.6",
     "vinyl-fs": "^2.4.4"
   },
   "publishConfig": {
