BK-66 Add smooth scroll component

--- a/config/config.yml
+++ b/config/config.yml
@@ -112,6 +112,7 @@ plugins:
           - src/_patterns/02-components/bolt-page-footer/src
           - src/_patterns/02-components/bolt-page-header/src
           - src/_patterns/02-components/bolt-quote
+          - src/_patterns/02-components/bolt-smooth-scroll/src
           - src/_patterns/02-components/bolt-teaser/src
           - src/_patterns/02-components/bolt-unordered-list/demo/theming
           - src/_patterns/02-components/bolt-unordered-list/src
