--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "@bolt/components-critical-fonts": "^0.4.2",
     "@bolt/components-icon": "^0.2.1",
     "@bolt/components-image": "^0.2.1",
+    "@bolt/components-smooth-scroll": "^0.0.0",
     "@bolt/elements-all": "^0.5.2",
     "@bolt/generic-all": "^0.5.2",
     "@bolt/objects-all": "^0.4.1",
