WIP: stashing automated status board work

--- a/src/_patterns/02-components/bolt-action-blocks/package.json
+++ b/src/_patterns/02-components/bolt-action-blocks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-action-blocks",
   "description": "Action Blocks Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "keywords": [
     "bolt design system",
     "bolt",
@@ -9,6 +9,10 @@
     "design system",
     "components"
   ],
+  "status": {
+    "design": "done",
+    "build": "work needed"
+  },
   "version": "0.4.0-alpha.34e7edba",
   "maintainers": [
     {
