--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@bolt/components-button",
-  "patternName": "button",
-  "patternType": "components",
-  "patternSubType": "buttons",
+  "type": "component",
   "style": "src/_button.scss",
   "main": "src/button.js",
+  "status": {
+    "build": "work needed"
+  },
   "templates": {
     "button": {
       "filename": "button.twig",
