--- a/src/_patterns/02-components/bolt-chip-list/package.json
+++ b/src/_patterns/02-components/bolt-chip-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-chip-list",
   "description": "Chip List Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "keywords": [
     "bolt design system",
     "bolt",
