--- a/src/_patterns/02-components/bolt-color-swatch/package.json
+++ b/src/_patterns/02-components/bolt-color-swatch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-color-swatch",
-  "type": "pattern",
+  "type": "component",
   "patternType": "atoms",
   "patternSubtype": "color",
   "description": "Color Swatch Component",
@@ -11,6 +11,10 @@
     "ui toolkit",
     "design system"
   ],
+  "status": {
+    "design": "done",
+    "build": "work needed"
+  },
   "version": "0.6.0-alpha.34e7edba",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
