--- a/src/_patterns/02-components/bolt-device-viewer/package.json
+++ b/src/_patterns/02-components/bolt-device-viewer/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@bolt/components-device-viewer",
 	"description": "Device Viewer Component in Bolt",
-	"type": "pattern",
+	"type": "component",
 	"patternType": "molecules",
 	"keywords": [
 		"bolt design system",
@@ -10,6 +10,10 @@
 		"design system",
 		"components"
 	],
+	"status": {
+		"design": "done",
+		"build": "in progress"
+	},
 	"version": "0.1.0-alpha.34e7edba",
 	"maintainers": [
 		{
