--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-icons",
-  "type": "pattern",
+  "type": "component",
   "patternType": "atoms",
   "description": "All icons in Bolt",
   "keywords": [
