--- a/src/_patterns/02-components/bolt-image/package.json
+++ b/src/_patterns/02-components/bolt-image/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bolt/components-image",
+  "type": "component",
   "description": "Image Component in Bolt",
   "keywords": [
     "bolt design system",
