--- a/src/_patterns/02-components/bolt-logo/package.json
+++ b/src/_patterns/02-components/bolt-logo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-logo",
   "description": "Logo Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "patternType": "molecules",
   "patternSubtype": "layout",
   "keywords": [
