--- a/src/_patterns/02-components/bolt-page-header/package.json
+++ b/src/_patterns/02-components/bolt-page-header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-page-header",
-  "type": "pattern",
+  "type": "component",
   "description": "Page Header Component",
   "keywords": [
     "bolt design system",
@@ -8,6 +8,10 @@
     "ui toolkit",
     "design system"
   ],
+  "status": {
+    "design": "pending",
+    "build": "pending"
+  },
   "version": "0.1.0-alpha.34e7edba",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
