--- a/src/_patterns/02-components/bolt-teaser/package.json
+++ b/src/_patterns/02-components/bolt-teaser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-teaser",
-  "type": "pattern",
+  "type": "component",
   "description": "Teaser Component",
   "keywords": [
     "eyeglass-module",
