--- a/src/_patterns/02-components/bolt-unordered-list/package.json
+++ b/src/_patterns/02-components/bolt-unordered-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-unordered-list",
   "description": "Unordered-list Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "patternType": "molecules",
   "keywords": [
     "bolt design system",
