--- a/src/_patterns/02-components/bolt-accordion/package.json
+++ b/src/_patterns/02-components/bolt-accordion/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@bolt/components-accordion",
-  "type": "pattern",
-  "patternType": "atoms",
+  "type": "component",
   "description": "Accordion component in Bolt",
   "keywords": [
     "eyeglass-module",
@@ -10,6 +9,10 @@
     "ui toolkit",
     "design system"
   ],
+  "status": {
+    "design": "in progress",
+    "build": "pending"
+  },
   "version": "0.1.0-alpha.34e7edba",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
