--- a/src/_patterns/02-components/bolt-background/package.json
+++ b/src/_patterns/02-components/bolt-background/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-background",
   "description": "Background Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "patternType": "atoms",
   "patternSubtype": "layout",
   "keywords": [
@@ -11,6 +11,10 @@
     "design system",
     "objects"
   ],
+  "status": {
+    "design": "done",
+    "build": "work needed"
+  },
   "version": "0.3.0-alpha.34e7edba",
   "maintainers": [
     {
