--- a/src/_patterns/02-components/bolt-band/package.json
+++ b/src/_patterns/02-components/bolt-band/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-band",
   "description": "Band Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "patternType": "molecules",
   "patternSubtype": "layout",
   "keywords": [
