--- a/src/_patterns/02-components/bolt-blockquote/package.json
+++ b/src/_patterns/02-components/bolt-blockquote/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@bolt/components-blockquote",
 	"description": "Blockquote Component in Bolt",
-	"type": "pattern",
+	"type": "component",
 	"patternType": "molecules",
 	"keywords": [
 		"bolt design system",
