--- a/src/_patterns/02-components/bolt-card/package.json
+++ b/src/_patterns/02-components/bolt-card/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-card",
   "description": "Card Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "patternType": "molecules",
   "keywords": [
     "bolt design system",
