--- a/src/_patterns/02-components/bolt-chip/package.json
+++ b/src/_patterns/02-components/bolt-chip/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-chip",
   "description": "Chip Component in Bolt",
-  "type": "pattern",
+  "type": "component",
   "keywords": [
     "bolt design system",
     "bolt",
