--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-icon",
-  "type": "pattern",
+  "type": "component",
   "patternType": "atoms",
   "description": "Icon component in Bolt",
   "keywords": [
@@ -10,6 +10,10 @@
     "ui toolkit",
     "design system"
   ],
+  "status": {
+    "design": "done",
+    "build": "work needed"
+  },
   "version": "0.3.0-alpha.34e7edba",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
