--- a/src/_patterns/02-components/bolt-link/package.json
+++ b/src/_patterns/02-components/bolt-link/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bolt/components-link",
+  "type": "component",
   "style": "src/link.scss",
   "description": "Link Component",
   "keywords": [
@@ -9,6 +10,10 @@
     "ui toolkit",
     "design system"
   ],
+  "status": {
+    "design": "done",
+    "build": "work needed"
+  },
   "version": "0.2.0-alpha.34e7edba",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
