--- a/src/_patterns/02-components/bolt-ordered-list/package.json
+++ b/src/_patterns/02-components/bolt-ordered-list/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@bolt/components-ordered-list",
 	"description": "Ordered-list Component in Bolt",
-	"type": "pattern",
+	"type": "component",
 	"patternType": "molecules",
 	"keywords": [
 		"bolt design system",
