--- a/src/_patterns/02-components/bolt-page-footer/package.json
+++ b/src/_patterns/02-components/bolt-page-footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-page-footer",
-  "type": "pattern",
+  "type": "component",
   "description": "Page Footer Component",
   "keywords": [
     "eyeglass-module",
@@ -9,6 +9,10 @@
     "ui toolkit",
     "design system"
   ],
+  "status": {
+    "design": "pending",
+    "build": "pending"
+  },
   "version": "0.5.0-alpha.34e7edba",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
