chore: updating lerna publishing process

--- a/lerna.json
+++ b/lerna.json
@@ -20,7 +20,7 @@
   ],
   "command": {
     "publish": {
-      "allowBranch": "!feature/*"
+      "message": "chore(release): publish %s"
     },
     "bootstrap": {
       "hoist": true
