--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "publish": "lerna publish",
-    "publish:canary": "lerna publish --canary --preid=next",
+    "publish:canary": "lerna publish --canary --npm-tag=next",
     "start": "lerna exec --scope @bolt/components-icons -- npm run build && gulp",
     "build": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build --prod",
     "build:full": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build:full --prod",
