chore: removing alpha prefixes from a few packages that got missed

--- a/packages/bolt-config-presets/config-browserlist/package.json
+++ b/packages/bolt-config-presets/config-browserlist/package.json
@@ -7,7 +7,7 @@
     "config",
     "bolt design system"
   ],
-  "version": "0.4.0-alpha.28740f6e",
+  "version": "0.4.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
