--- a/packages/bolt-config-presets/config-stylelint/package.json
+++ b/packages/bolt-config-presets/config-stylelint/package.json
@@ -5,7 +5,7 @@
     "stylelint",
     "stylelint-config"
   ],
-  "version": "0.5.0-alpha.28740f6e",
+  "version": "0.5.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
