--- a/src/_patterns/02-components/bolt-device-viewer/package.json
+++ b/src/_patterns/02-components/bolt-device-viewer/package.json
@@ -40,7 +40,7 @@
 	},
 	"dependencies": {
 		"@bolt/build-webpack": "^0.4.0",
-		"@bolt/core": "^0.4.0-alpha.61ca6bce",
+		"@bolt/core": "^0.4.0",
 		"@bolt/settings-all": "^0.8.0",
 		"@bolt/settings-colors": "^0.7.0",
 		"@bolt/settings-global": "^0.8.0",
