--- a/config/config.yml
+++ b/config/config.yml
@@ -112,6 +112,7 @@ plugins:
           - src/_patterns/02-components/bolt-page-footer/src
           - src/_patterns/02-components/bolt-page-header/src
           - src/_patterns/02-components/bolt-quote
+          - src/_patterns/02-components/bolt-smooth-scroll/demo
           - src/_patterns/02-components/bolt-smooth-scroll/src
           - src/_patterns/02-components/bolt-teaser/src
           - src/_patterns/02-components/bolt-unordered-list/demo/theming
@@ -122,6 +123,7 @@ plugins:
           - src/_patterns/04-pages/d8-homepage
           - src/_patterns/04-pages/d8-product
           - src/_patterns/04-pages/d8-resource-details
+          - src/_patterns/04-pages/test
     roots: {}
 ishMinimum: '240'
 ishMaximum: '2600'
