--- a/src/_patterns/02-components/bolt-navbar/package.json
+++ b/src/_patterns/02-components/bolt-navbar/package.json
@@ -45,6 +45,7 @@
     "@bolt/tools-spacing": "^0.5.0",
     "@bolt/tools-color-palette": "^0.5.2",
     "@bolt/tools-font-size": "^0.5.2",
-    "@bolt/tools-font-weight": "^0.5.1"
+    "@bolt/tools-font-weight": "^0.5.1",
+    "@bolt/components-smooth-scroll": "^0.0.0"
   }
 }
