--- a/src/_patterns/01-core/06-themes/themes-all/package.json
+++ b/src/_patterns/01-core/06-themes/themes-all/package.json
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@bolt/themes-dark": "^0.1.1",
-    "@bolt/themes-error": "^0.0.1",
+    "@bolt/themes-xdark": "^0.1.1",
     "@bolt/themes-light": "^0.1.0",
-    "@bolt/themes-notice": "^0.0.1"
+    "@bolt/themes-xlight": "^0.1.0"
   }
 }
