fix: custom element update

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -427,6 +427,10 @@ status_colors:
   filename: 02-status-colors.twig
   path: src/_patterns/01-core/02-tools/tools-spacing/demos/02-status-colors.twig
   namespace: '@bolt/02-status-colors.twig'
+sticky:
+  filename: sticky.twig
+  path: src/_patterns/02-components/bolt-sticky/src/sticky.twig
+  namespace: '@bolt/sticky.twig'
 subheadline:
   filename: subheadline.twig
   path: src/_patterns/02-components/bolt-headline/src/subheadline.twig
