--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "scripts": {
     "backstop-test": "backstop test",
     "backstop-reference": "backstop reference",
-    "bootstrap": "lerna bootstrap --hoist",
-    "_build": "NODE_ENV=production webpack --optimize-minimize && gulp build --prod",
-    "_build:icons": "npm run build --prefix src/components/bolt-icons",
-    "_build:plicons": "npm run build:icons && lerna exec --scope @bolt/components-icon -- npm run build && lerna exec --scope @bolt/components-icon -- npm run copy:pl",
+    "bootstrap": "lerna bootstrap --hoist && npm run pre-build",
     "lint:js": "eslint ./build-tools",
     "lint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
@@ -26,9 +23,10 @@
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "publish": "lerna run build && lerna run publish-please && lerna publish --skip-git",
-    "start": "lerna exec --scope @bolt/components-icons -- npm run build && gulp",
-    "build": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build --prod",
-    "build:full": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build:full --prod",
+    "start": "gulp",
+    "pre-build": "lerna exec -- npm run --if-present build",
+    "build": "npm run pre-build && gulp build --prod",
+    "build:full": "npm run pre-build && gulp build:full --prod",
     "setup": "npm run bootstrap && npm run composer:setup",
     "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run composer:clean && npm run composer:install; fi",
     "composer:install": "composer install --prefer-source --no-interaction --no-dev",
@@ -180,7 +178,7 @@
     "remark-preset-lint-markdown-style-guide": "^2.1.1",
     "remark-preset-lint-recommended": "^3.0.1",
     "sass-loader": "^6.0.6",
-    "skatejs": "^5.0.0-beta.3",
+    "skatejs": "^5.0.0-beta.4",
     "skatejs-web-components": "^0.0.1",
     "snyk": "^1.47.0",
     "standard-version": "^4.2.0",
