WIP: stashing cleanup + progress fixing SVG icons to show up properly

--- a/build-tools/gulp-tasks/build-images/package.json
+++ b/build-tools/gulp-tasks/build-images/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/build-images",
-  "version": "0.2.0",
+  "version": "0.1.1",
   "license": "MIT",
   "description": "Optimize and auto-resize responsive images",
   "main": "index.js",
@@ -24,7 +24,8 @@
     }
   ],
   "dependencies": {
-    "@bolt/build-core": "^0.5.0",
+    "@bolt/build-core": "^0.4.1",
+    "@bolt/core-data": "^0.2.0",
     "async": "^2.5.0",
     "gm": "^1.23.0",
     "gulp": "gulpjs/gulp#4.0",
