--- a/lerna.json
+++ b/lerna.json
@@ -3,8 +3,10 @@
   "version": "independent",
   "packages": [
     "packages/**",
-    "src/fonts",
+    "src/fonts/*",
+    "src/_data/*",
     "src/_data",
+    "src/fonts",
     "src",
     "src/_patterns/**/*",
     "build-tools/gulp-tasks/",
