--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
   "scripts": {
     "backstop-test": "backstop test",
     "backstop-reference": "backstop reference",
-    "bootstrap": "lerna bootstrap --hoist && npm link --force-local",
-    "_build": "NODE_ENV=production webpack --optimize-minimize && gulp build --prod",
-    "_build:icons": "npm run build --prefix src/components/bolt-icons",
-    "_build:plicons": "npm run build:icons && lerna exec --scope @bolt/components-icon -- npm run build && lerna exec --scope @bolt/components-icon -- npm run copy:pl",
+    "bootstrap": "lerna bootstrap --hoist && npm run pre-build",
     "lint:js": "eslint ./build-tools",
     "lint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
+    "clean:composer": "rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components",
     "clean:git": "git clean -xdf",
     "clean:lighthouse": "rm *.report.html",
-    "clean:all": "npm run clean:git && npm run clean:lerna",
+    "clean:all": "npm-run-all --parallel clean:* -c",
     "lint": "npm-run-all --parallel lint:* -c",
     "mocha": "npm run mocha:build-tools",
     "mocha:build-tools": "mocha ./build-tools/**/tests/*.test.js",
@@ -27,13 +25,13 @@
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "publish": "lerna publish",
     "publish:canary": "lerna publish --canary --npm-tag=next",
-    "start": "lerna exec --scope @bolt/components-icons -- npm run build && gulp",
-    "build": "lerna exec --scope @bolt/components-icons -- npm run build && lerna exec --scope @bolt/components-device-viewer -- npm run build && gulp build --prod",
-    "build:full": "lerna exec --scope @bolt/components-icons -- npm run build && lerna exec --scope @bolt/components-device-viewer -- npm run build && gulp build:full --prod",
+    "start": "gulp",
+    "pre-build": "lerna exec -- npm run --if-present build",
+    "build": "npm run pre-build && gulp build --prod",
+    "build:full": "npm run pre-build && gulp build:full --prod",
     "setup": "npm run bootstrap && npm run composer:setup",
-    "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run composer:clean && npm run composer:install; fi",
+    "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run clean:composer && npm run composer:install; fi",
     "composer:install": "composer install --prefer-source --no-interaction --no-dev",
-    "composer:clean": "rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components",
     "test:travis": "yarn pretest && yarn lint",
     "test:lighthouse": "concurrently --kill-others \"http-server dist\" \"lighthouse --view http://localhost:8080\" ",
     "test:full": "yarn lint:scss && polymer test && yarn test:lighthouse && yarn lint:remark && npm run mocha",
@@ -86,123 +84,15 @@
   "dependencies": {
     "@bolt/config-stylelint": "file:packages/bolt-config-presets/config-stylelint",
     "@bolt/eslint-config": "file:packages/bolt-config-presets/config-eslint",
-    "@times-components/brightcove-video": "^1.4.0",
-    "@webcomponents/custom-elements": "^1.0.4",
-    "@webcomponents/shadycss": "^1.0.6",
-    "@webcomponents/shadydom": "bolt-design-system/shadydom#hotfix/fix-text-undefined-IE11",
-    "@webcomponents/template": "^1.1.0",
-    "@webcomponents/webcomponents-platform": "^1.0.0",
-    "@webcomponents/webcomponentsjs": "^1.0.14",
-    "array.from": "^1.0.3",
-    "autoprefixer": "^7.1.4",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-jsx-pragmatic": "^1.0.2",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-syntax-class-properties": "^6.13.0",
-    "babel-plugin-transform-builtin-classes": "^0.4.0",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-plugin-transform-es2015-spread": "^6.22.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-plugin-transform-skate-flow-props": "^0.1.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-traverse": "^6.26.0",
-    "babel-types": "^6.24.1",
-    "babylon": "^6.16.1",
-    "backstopjs": "^3.0.31",
-    "camel-case": "^3.0.0",
-    "chai": "^4.1.0",
-    "chai-fs": "^1.0.0",
-    "chokidar": "^1.7.0",
-    "clean-css-loader": "^0.1.3",
-    "concurrently": "^3.5.0",
-    "core-js": "^2.5.1",
-    "css-loader": "^0.28.7",
-    "cssnano": "^3.10.0",
-    "cz-conventional-changelog": "^2.0.0",
-    "cz-lerna-changelog": "^1.2.1",
-    "desvg-loader": "^0.1.0",
-    "document-register-element": "^1.7.0",
-    "es6-promise": "^4.1.1",
-    "es6-symbol": "^3.1.1",
+    "gulp": "gulpjs/gulp#4.0",
+    "lerna": "^2.5.1",
+    "precommit": "^1.2.2",
+    "mocha": "^4.0.0",
+    "npm-run-all": "^4.0.2",
+    "snyk": "^1.47.0",
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-plugin-import": "^2.7.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "feature-toggle": "^0.3.0",
-    "flatten-packages": "^0.1.4",
-    "fs-extra": "^4.0.2",
-    "glob": "^7.1.2",
-    "globby": "^6.1.0",
-    "gulp": "gulpjs/gulp#4.0",
-    "gulp-util": "^3.0.8",
-    "http-server": "^0.10.0",
-    "husky": "^0.14.3",
-    "inquirer": "^3.2.0",
-    "js-yaml": "^3.9.1",
-    "json-server": "^0.12.0",
-    "lerna": "^2.5.1",
-    "lerna-changelog": "^0.6.0",
-    "lerna-semantic-release": "^9.1.0",
-    "lighthouse": "^2.5.0",
-    "lodash": "^4.17.4",
-    "lozad": "^1.0.6",
-    "merge": "^1.2.0",
-    "mocha": "^4.0.0",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.12.1",
-    "now-travis": "^1.0.1",
-    "npm-run-all": "^4.0.2",
-    "npm-sass": "^2.2.1",
-    "object-assign": "^4.1.1",
-    "object.assign": "^4.0.4",
-    "path": "^0.12.7",
-    "postcss": "^6.0.13",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^2.0.8",
-    "pre-commit": "^1.2.2",
-    "precommit": "^1.2.2",
-    "prettier-eslint-cli": "^4.2.1",
-    "publish-please": "^2.3.1",
-    "read-pkg-up": "^2.0.0",
-    "recast": "^0.12.7",
-    "remark-cli": "^4.0.0",
-    "remark-lint": "^6.0.1",
-    "remark-preset-github": "^0.0.7",
-    "remark-preset-lint-consistent": "^2.0.1",
-    "remark-preset-lint-markdown-style-guide": "^2.1.1",
-    "remark-preset-lint-recommended": "^3.0.1",
-    "sass-loader": "^6.0.6",
-    "skatejs": "^5.0.0-beta.3",
-    "skatejs-web-components": "^0.0.1",
-    "snyk": "^1.47.0",
-    "standard-version": "^4.2.0",
-    "style-loader": "^0.18.2",
-    "stylefmt": "^6.0.0",
-    "stylelint": "^8.0.0",
-    "stylelint-scss": "^2.0.1",
-    "svg-injector": "^1.1.3",
-    "svg-loader": "^0.0.2",
-    "text-loader": "^0.0.1",
-    "to-string-loader": "^1.1.5",
-    "touch": "^3.1.0",
-    "uppercamelcase": "^3.0.0",
-    "validate-commit-msg": "^2.12.2",
-    "web-component-refs": "^0.0.2",
-    "web-component-tester": "^6.3.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-manifest-plugin": "^1.3.2",
-    "workbox-webpack-plugin": "^2.1.0",
-    "xo": "^0.18.2"
+    "eslint-plugin-import": "^2.7.0"
   },
   "snyk": true,
   "lint-staged": {
@@ -221,24 +111,6 @@
     "files": [
       "bolt-website",
       "bolt-website/pattern-lab/styleguide/bower_components/**/*"
-    ]
-  },
-  "xo": {
-    "space": true,
-    "envs": [
-      "browser"
-    ],
-    "rules": {
-      "eol-last": 0,
-      "import/no-unassigned-import": 0
-    },
-    "ignores": [
-      "test/test-fixture.js"
-    ]
-  },
-  "remarkConfig": {
-    "plugins": [
-      "preset-github"
     ]
   }
 }
