--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -28,6 +28,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-plugin-jsx-pragmatic": "^1.0.2",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-exponentiation-operator": "^6.24.1",
