--- a/build-tools/gulp-tasks/build-images/package.json
+++ b/build-tools/gulp-tasks/build-images/package.json
@@ -25,7 +25,7 @@
   ],
   "dependencies": {
     "@bolt/build-core": "^0.4.1",
-    "@bolt/core-data": "^0.2.0",
+    "@bolt/core": "^0.1.0",
     "async": "^2.5.0",
     "gm": "^1.23.0",
     "gulp": "gulpjs/gulp#4.0",
