fix: reverting remaining packages to latest on master while preserving product-specific changes.

--- a/src/_patterns/02-components/bolt-image/package.json
+++ b/src/_patterns/02-components/bolt-image/package.json
@@ -9,7 +9,7 @@
     "component",
     "image"
   ],
-  "version": "0.3.0",
+  "version": "0.2.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -37,9 +37,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/build-webpack": "^0.3.1",
-    "@bolt/objects-ratio": "^0.7.0",
+    "@bolt/objects-ratio": "^0.6.0",
     "lazysizes": "^4.0.0-rc4"
+  },
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.3.1"
   },
   "scripts": {
     "prepublishOnly": "npm run build",
