--- a/build-tools/gulp-tasks/build-webpack/package.json
+++ b/build-tools/gulp-tasks/build-webpack/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"babel-loader": "^7.1.2",
 		"postcss-loader": "^2.0.8",
+		"awesome-typescript-loader": "^3.2.3",
 		"babel-plugin-transform-builtin-classes": "^0.4.0",
 		"babel-plugin-transform-builtin-extend": "^1.1.2",
 		"babel-plugin-transform-class-properties": "^6.24.1",
@@ -35,6 +36,11 @@
 		"babel-plugin-transform-react-jsx": "^6.24.1",
 		"babel-plugin-transform-skate-flow-props": "^0.1.0",
 		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-es2016": "^6.24.1",
+		"babel-preset-es2017": "^6.24.1",
+		"babel-preset-flow": "^6.23.0",
+		"babel-preset-stage-0": "^6.24.1",
 		"babel-traverse": "^6.26.0",
 		"babel-types": "^6.24.1",
 		"clean-css-loader": "^0.1.3",
@@ -49,6 +55,7 @@
 		"npm-sass": "^2.2.1",
 		"sass-loader": "^6.0.6",
 		"style-loader": "^0.18.2",
+		"typescript": "^2.5.3",
 		"uglifyjs-webpack-plugin": "1.0.0",
 		"webpack": "^3.8.1",
 		"webpack-concat-plugin": "^1.4.1",
