--- a/src/_patterns/02-components/bolt-card/package.json
+++ b/src/_patterns/02-components/bolt-card/package.json
@@ -10,7 +10,7 @@
     "design system",
     "components"
   ],
-  "version": "0.6.0",
+  "version": "0.5.4",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,10 +36,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/build-webpack": "^0.3.1",
-    "@bolt/core": "^0.4.0-alpha.61ca6bce",
-    "@bolt/settings-spacing": "^0.8.0",
-    "@bolt/tools-all": "^0.6.0",
+    "@bolt/core": "^0.3.0",
+    "@bolt/settings-spacing": "^0.7.0",
+    "@bolt/tools-all": "^0.5.4",
     "@webcomponents/custom-elements": "^1.0.4",
     "@webcomponents/shadycss": "^1.0.6",
     "@webcomponents/shadydom": "bolt-design-system/shadydom#hotfix/fix-text-undefined-IE11",
@@ -49,6 +48,9 @@
     "core-js": "^2.5.1",
     "npm-run-all": "^4.0.2",
     "skatejs": "^5.0.0-beta.3"
+  },
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.3.1"
   },
   "main": "dist/bolt-card.min.js",
   "style": "src/card.scss",
