fix: fresh manual merge of product page work, including device viewer template updates + adding a new shared polyfill loader to @bolt/core

--- a/config/config.yml
+++ b/config/config.yml
@@ -97,6 +97,10 @@ plugins:
           - src/_patterns/02-components/bolt-card/src
           - src/_patterns/02-components/bolt-chip-list
           - src/_patterns/02-components/bolt-chip/src
+          - src/_patterns/02-components/bolt-device-viewer/src
+          - src/_patterns/02-components/bolt-device-viewer/src/devices
+          - src/_patterns/02-components/bolt-device-viewer/src/parts
+          - src/_patterns/02-components/bolt-figure/src
           - src/_patterns/02-components/bolt-headline/demo
           - src/_patterns/02-components/bolt-headline/demo/h1-through-h6
           - src/_patterns/02-components/bolt-headline/src
@@ -117,6 +121,7 @@ plugins:
           - src/_patterns/04-pages/bolt-homepage
           - src/_patterns/04-pages/bolt-theming-qa
           - src/_patterns/04-pages/d8-homepage
+          - src/_patterns/04-pages/d8-product-landing
           - src/_patterns/04-pages/d8-resource-details
     roots: {}
 ishMinimum: '240'
