--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "backstop-test": "backstop test",
     "backstop-reference": "backstop reference",
     "bootstrap": "lerna bootstrap --hoist",
-    "_build": "NODE_ENV=production webpack --optimize-minimize && gulp build --prod",
-    "_build:icons": "npm run build --prefix src/components/bolt-icons",
-    "_build:plicons": "npm run build:icons && lerna exec --scope @bolt/components-icon -- npm run build && lerna exec --scope @bolt/components-icon -- npm run copy:pl",
     "lint:js": "eslint ./build-tools",
     "lint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
     "clean:git": "git clean -xdf",
+    "clean:composer": "rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components",
     "clean:lighthouse": "rm *.report.html",
     "clean:all": "npm run clean:git && npm run clean:lerna",
     "lint": "npm-run-all --parallel lint:* -c",
@@ -27,11 +25,12 @@
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "publish": "lerna publish",
     "publish:canary": "lerna publish --canary --npm-tag=next",
-    "start": "lerna exec --scope @bolt/components-icons -- npm run build && gulp",
-    "build": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build --prod",
-    "build:full": "lerna exec --scope @bolt/components-icons -- npm run build && gulp build:full --prod",
+    "start": "gulp",
+    "pre-build": "lerna exec -- npm run --if-present build",
+    "build": "npm run pre-build && gulp build --prod",
+    "build:full": "npm run pre-build && gulp build:full --prod",
     "setup": "npm run bootstrap && npm run composer:setup",
-    "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run composer:clean && npm run composer:install; fi",
+    "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run clean:composer && npm run composer:install; fi",
     "composer:install": "composer install --prefer-source --no-interaction --no-dev",
     "composer:clean": "rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components",
     "test:travis": "yarn pretest && yarn lint",
