--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@bolt/components-all": "^0.5.10",
     "@bolt/components-card": "^0.5.4",
+    "@bolt/components-device-viewer": "^0.0.0",
     "@bolt/components-critical-fonts": "^0.4.7",
     "@bolt/components-icon": "^0.2.5",
     "@bolt/components-image": "^0.2.1",
