--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -20,6 +20,8 @@
     "core-js": "^2.5.1",
     "es6-promise": "^4.1.1",
     "preact": "^8.2.6",
-    "skatejs": "^5.0.0-beta.3"
+    "skatejs": "^5.0.0-beta.3",
+    "lit-html": "latest",
+    "@skatejs/renderer-lit-html": "latest"
   }
 }
