chore(release): publish %s
 - @bolt/core@0.4.0-rc.1
 - @bolt/bolt@0.5.0-rc.1
 - @bolt/objects-flag@0.4.0-rc.1
 - @bolt/components-blockquote@0.2.3-rc.1
 - @bolt/components-card@0.5.5-rc.1
 - @bolt/components-critical-fonts@0.4.8-rc.1
 - @bolt/components-device-viewer@0.1.0-rc.1
 - @bolt/components-figure@0.1.0-rc.1
 - @bolt/components-headline@0.6.4-rc.1
 - @bolt/components-icon@0.3.0-rc.1
 - @bolt/components-icons@0.1.4-rc.1
 - @bolt/components-image@0.3.0-rc.1
 - @bolt/components-link@0.2.0-rc.1
 - @bolt/components-page-header@0.0.1-alpha.8
 - @bolt/components-all@0.6.0-rc.1
 - @bolt/build-tools@0.5.0-rc.1
 - @bolt/build-webpack@0.4.0-rc.1

--- a/src/_patterns/02-components/bolt-blockquote/package.json
+++ b/src/_patterns/02-components/bolt-blockquote/package.json
@@ -10,7 +10,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.2.2",
+	"version": "0.2.3-rc.1",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
