--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -8,7 +8,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.5.10",
+	"version": "0.6.0-rc.1",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -38,19 +38,19 @@
 		"@bolt/components-action-blocks": "^0.3.0",
 		"@bolt/components-background": "^0.2.2",
 		"@bolt/components-band": "^0.4.1",
-		"@bolt/components-blockquote": "^0.2.2",
+		"@bolt/components-blockquote": "^0.2.3-rc.1",
 		"@bolt/components-button": "^0.6.1",
 		"@bolt/components-button-group": "^0.2.0",
-		"@bolt/components-card": "^0.5.4",
+		"@bolt/components-card": "^0.5.5-rc.1",
 		"@bolt/components-chip": "^0.2.0",
 		"@bolt/components-chip-list": "^0.2.0",
 		"@bolt/components-color-swatch": "^0.5.0",
-		"@bolt/components-critical-fonts": "^0.4.7",
+		"@bolt/components-critical-fonts": "^0.4.8-rc.1",
 		"@bolt/components-critical-path": "^0.2.0",
-		"@bolt/components-headline": "^0.6.3",
-		"@bolt/components-icon": "^0.2.5",
-		"@bolt/components-icons": "^0.1.3",
-		"@bolt/components-image": "^0.2.1",
+		"@bolt/components-headline": "^0.6.4-rc.1",
+		"@bolt/components-icon": "^0.3.0-rc.1",
+		"@bolt/components-icons": "^0.1.4-rc.1",
+		"@bolt/components-image": "^0.3.0-rc.1",
 		"@bolt/components-logo": "^0.2.1",
 		"@bolt/components-ordered-list": "^0.1.4",
 		"@bolt/components-page-footer": "^0.4.0",
