--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/bolt",
   "description": "Bolt Design System",
-  "version": "0.4.9",
+  "version": "0.5.0-rc.1",
   "license": "MIT",
   "main": "bolt.js",
   "repository": {
@@ -9,12 +9,12 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/components-all": "^0.5.10",
-    "@bolt/components-card": "^0.5.4",
-    "@bolt/components-device-viewer": "^0.0.0",
-    "@bolt/components-critical-fonts": "^0.4.7",
-    "@bolt/components-icon": "^0.2.5",
-    "@bolt/components-image": "^0.2.1",
+    "@bolt/components-all": "^0.6.0-rc.1",
+    "@bolt/components-card": "^0.5.5-rc.1",
+    "@bolt/components-critical-fonts": "^0.4.8-rc.1",
+    "@bolt/components-device-viewer": "^0.1.0-rc.1",
+    "@bolt/components-icon": "^0.3.0-rc.1",
+    "@bolt/components-image": "^0.3.0-rc.1",
     "@bolt/elements-all": "^0.5.4",
     "@bolt/generic-all": "^0.5.2",
     "@bolt/objects-all": "^0.4.3",
