--- a/src/_patterns/01-core/05-objects/bolt-flag-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-flag-object/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.3.0",
+  "version": "0.4.0-rc.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
