--- a/src/_patterns/02-components/bolt-device-viewer/package.json
+++ b/src/_patterns/02-components/bolt-device-viewer/package.json
@@ -10,7 +10,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.0.0",
+	"version": "0.1.0-rc.1",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -39,8 +39,8 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@bolt/build-webpack": "^0.3.1",
-		"@bolt/core": "^0.3.0",
+		"@bolt/build-webpack": "^0.4.0-rc.1",
+		"@bolt/core": "^0.4.0-rc.1",
 		"@bolt/settings-all": "^0.7.4",
 		"@bolt/tools-all": "^0.5.4",
 		"@skatejs/renderer-preact": "^0.1.0",
