--- a/src/_patterns/02-components/bolt-icons/package.json
+++ b/src/_patterns/02-components/bolt-icons/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.1.3",
+  "version": "0.1.4-rc.1",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
