--- a/src/_patterns/02-components/bolt-band/package.json
+++ b/src/_patterns/02-components/bolt-band/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.4.1",
+  "version": "0.5.1-rc.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
