chore(release): publish %s
 - @bolt/components-page-header@0.0.2
 - @bolt/components-all@0.6.0-rc.3

--- a/src/_patterns/02-components/bolt-page-header/package.json
+++ b/src/_patterns/02-components/bolt-page-header/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@bolt/components-page-header",
   "type": "pattern",
-  "description": "Page Header Component",
+  "description": "(In Progress) Page Header Component",
   "keywords": [
     "bolt design system",
     "bolt",
     "ui toolkit",
     "design system"
   ],
-  "version": "0.0.1-alpha.10",
+  "version": "0.0.2",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -22,6 +22,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "style": "src/_page-header.scss",
-  "private": true
+  "style": "src/_page-header.scss"
 }
