--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -8,7 +8,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.6.0-rc.2",
+	"version": "0.6.0-rc.3",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -37,7 +37,7 @@
 	"dependencies": {
 		"@bolt/components-action-blocks": "^0.3.0",
 		"@bolt/components-background": "^0.2.2",
-		"@bolt/components-band": "^0.4.1",
+		"@bolt/components-band": "^0.5.1-rc.1",
 		"@bolt/components-blockquote": "^0.2.3-rc.2",
 		"@bolt/components-button": "^0.6.1",
 		"@bolt/components-button-group": "^0.2.0",
@@ -54,7 +54,7 @@
 		"@bolt/components-logo": "^0.2.1",
 		"@bolt/components-ordered-list": "^0.1.4",
 		"@bolt/components-page-footer": "^0.4.0",
-		"@bolt/components-page-header": "^0.0.1-alpha.10",
+		"@bolt/components-page-header": "^0.0.2",
 		"@bolt/components-site": "^0.5.0",
 		"@bolt/components-teaser": "^0.2.0",
 		"@bolt/components-unordered-list": "^0.1.2"
