--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -3,8 +3,7 @@
   "patternName": "button",
   "patternType": "components",
   "patternSubType": "buttons",
-  "style": "src/_button.scss",
-  "main": "src/button.js",
+  "style": "src/button.scss",
   "templates": {
     "button": {
       "filename": "button.twig",
@@ -33,5 +32,16 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.3.1"
+  },
+  "dependencies": {
+    "@bolt/settings-all": "^0.7.4",
+    "@bolt/tools-all": "^0.5.4"
+  },
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry bolt-button=./src/button"
   }
 }
