--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -39,6 +39,7 @@
 		"@bolt/components-background": "^0.2.2",
 		"@bolt/components-band": "^0.5.1-rc.1",
 		"@bolt/components-blockquote": "^0.2.3-rc.2",
+		"@bolt/components-video": "^0.0.0",
 		"@bolt/components-button": "^0.6.2",
 		"@bolt/components-button-group": "^0.2.0",
 		"@bolt/components-card": "^0.5.5-rc.2",
