WIP: stashing in-progress work

--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -39,6 +39,7 @@
 		"@bolt/components-background": "^0.2.2",
 		"@bolt/components-band": "^0.5.2",
 		"@bolt/components-blockquote": "^0.2.4",
+		"@bolt/components-video": "^0.0.0",
 		"@bolt/components-button": "^0.6.3",
 		"@bolt/components-button-group": "^0.2.0",
 		"@bolt/components-card": "^0.5.6",
