fix: setting medium as the default theme

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -375,6 +375,14 @@ small:
   filename: small.twig
   path: src/_patterns/01-core/04-elements/elements-small/small.twig
   namespace: '@bolt/small.twig'
+smooth_scroll:
+  filename: smooth-scroll.twig
+  path: src/_patterns/02-components/bolt-smooth-scroll/src/smooth-scroll.twig
+  namespace: '@bolt/smooth-scroll.twig'
+smooth_scroll_demo:
+  filename: smooth-scroll.demo.twig
+  path: src/_patterns/02-components/bolt-smooth-scroll/demo/smooth-scroll.demo.twig
+  namespace: '@bolt/smooth-scroll.demo.twig'
 status_colors:
   filename: 02-status-colors.twig
   path: src/_patterns/01-core/02-tools/tools-spacing/demos/02-status-colors.twig
