--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/core",
   "description": "Core dependencies, utils, etc.",
-  "version": "0.4.0-rc.2",
+  "version": "0.4.0",
   "license": "MIT",
   "main": "index.js",
   "repository": {
