--- a/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.4.3",
+  "version": "0.4.4",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -38,7 +38,7 @@
     "@bolt/objects-bare-list": "^0.2.0",
     "@bolt/objects-block": "^0.2.0",
     "@bolt/objects-crop": "^0.2.0",
-    "@bolt/objects-flag": "^0.4.0-rc.2",
+    "@bolt/objects-flag": "^0.4.0",
     "@bolt/objects-grid": "^0.5.0",
     "@bolt/objects-inline-list": "^0.4.0",
     "@bolt/objects-island": "^0.4.0",
