--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.3.0-rc.2",
+  "version": "0.3.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -25,8 +25,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-icons": "^0.1.4-rc.2",
-    "@bolt/core": "^0.4.0-rc.2",
+    "@bolt/components-icons": "^0.1.4",
+    "@bolt/core": "^0.4.0",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4",
     "@skatejs/renderer-preact": "^0.1.0",
@@ -42,7 +42,7 @@
     "skatejs": "^5.0.0-beta.3"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.0-rc.2"
+    "@bolt/build-webpack": "^0.4.0"
   },
   "main": "dist/bolt-icon.min.js",
   "style": "src/icon.scss",
