--- a/src/_patterns/02-components/bolt-link/package.json
+++ b/src/_patterns/02-components/bolt-link/package.json
@@ -9,7 +9,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.2.0-rc.2",
+  "version": "0.2.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
