--- a/src/_patterns/02-components/bolt-sticky/package.json
+++ b/src/_patterns/02-components/bolt-sticky/package.json
@@ -41,5 +41,15 @@
   "twig": "src/sticky.twig",
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.4.1"
+  },
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/sticky --output-filename='bolt-sticky.min.js' --output-public-path /scripts/"
+  },
+  "dependencies": {
+    "stickybits": "^2.0.13"
   }
 }
